added changelogs for 1.1.0

--- a/doc/manual/changelogs.tex
+++ b/doc/manual/changelogs.tex
@@ -1,5 +1,15 @@
 
 \chapter{Change Logs}
 
+\subsection*{Version 1.1.0}
+\begin{itemize}
+ \item New storage layer, re-wrote most of the internals
+ \item Using tags instead of topologic dimension to identify elements
+ \item Added support for dynamic elements: polygon and PLCs
+ \item Added support for neighbour iteration
+ \item Addes support for multiple segmentations
+ \item New algorithms: intersection, seed point segmenting
+\end{itemize}
+
 \subsection*{Version 1.0.0}
 First release
